--- a/manifest.json
+++ b/manifest.json
@@ -8,32 +8,32 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/todo-app-js-pwa/images/maskable-icon-48.png",
+      "src": "images/maskable-icon-48.png",
       "type": "image/png", "sizes": "48x48",
       "purpose": "any maskable"
     },
     {
-      "src": "/todo-app-js-pwa/images/icon-48.png",
+      "src": "images/icon-48.png",
       "type": "image/png", "sizes": "48x48"
     },
     {
-      "src": "/todo-app-js-pwa/images/android-launchericon-72-72.png",
+      "src": "images/android-launchericon-72-72.png",
       "type": "image/png", "sizes": "72x72"
     },
     {
-      "src": "/todo-app-js-pwa/images/android-launchericon-96-96.png",
+      "src": "images/android-launchericon-96-96.png",
       "type": "image/png", "sizes": "96x96"
     },
     {
-      "src": "/todo-app-js-pwa/images/android-launchericon-144-144.png",
+      "src": "images/android-launchericon-144-144.png",
       "type": "image/png","sizes": "144x144"
     },
     {
-      "src": "/todo-app-js-pwa/images/android-launchericon-192-192.png",
+      "src": "images/android-launchericon-192-192.png",
       "type": "image/png", "sizes": "192x192"
     },
     {
-      "src": "/todo-app-js-pwa/images/android-launchericon-512-512.png",
+      "src": "images/android-launchericon-512-512.png",
       "type": "image/png", "sizes": "512x512"
     }
   ]
